--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "@gsap/react": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@tabler/icons-react": "^3.19.0",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.1",
     "gsap": "^3.12.5",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
